# ALM-ASSET-ENGINE

./: .gitignore  README.md  pyproject.toml  requirements.txt
ALM/: alm_io.py  corr_utils.py  engine.py  portfolio_opt.py  sim_utils.py  snapshot.py  stats_utils.py
alm_asset_engine.egg-info/: PKG-INFO  SOURCES.txt
data/params/: cov_shrink.csv  mu_bl.csv
examples/: old_alm_asset_engine.py  sample_ALM_IO.xlsx
optimize/: mvo.py  resampled_frontier.py
runner/: adapter_ref_to_portfolio.py  cli.py
tests/: test_engine_smoke.py  test_portfolio.py
